--- a/components/organisms/Sidebar/sidebar.module.scss
+++ b/components/organisms/Sidebar/sidebar.module.scss
@@ -561,6 +561,7 @@
     &_tour_type_mobile, 
     &_updated {
       font-size: 10px;
+      margin-bottom: 0;
       display: inline-block;
     }
 
